--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,15 +8,64 @@
 
 /* universal selectors */
 * {
+    background-color: var(--ocean);
 }
 
+h1,
+h2 {
+    color: var(--oatmeal);
+}
 header {
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
     padding-left: 5rem;
     padding-right: 5rem;
+    padding-top: 1.5rem;
     height: 5rem;
     width: 100%;
-    border: 5px solid var(--rust)
+    border-bottom: 3px solid var(--oatmeal);
+}
 
+.logo {
+    display: flex; 
+}
+
+nav {
+    background-color: var(--rust);
+}
+
+nav ul {
+    display: flex;
+    padding-left: 2rem;
+    color: var(--oatmeal);
+}
+
+nav ul li {
+    padding-left: 2rem;
+}
+
+a {
+    text-decoration: none;
+    color: var(--oatmeal);
+}
+
+.hero {
+    display: flex;
+    /* border: 5px solid var(--rust); */
+    height: 20rem;
+    width: 100%;
+}
+
+.top-left {
+    /* border: 5px solid var(--terracotta); */
+    width: 50%;
+    background-image: url(../images/neutral-placeholder.png);
+}
+
+.top-right {
+    /* border: 5px solid var(--terracotta); */
+    width: 50%;
+    background-color: var(--ocean);
+    border-bottom: 5px solid var(--oatmeal);
+    
 }
