--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,20 @@
 /* colour pallete */
 :root {
-    --rust: #c27047d0;
+    --rust: rgba(194, 112, 71, 0.947);
     --terracotta: #EDC2A5;
     --oatmeal: #F6F4EE;
     --ocean: #78909C;
 }
 
-/* universal selectors */
-* {
-    background-color: var(--ocean);
+*{
+    margin: 0;
+    padding: 0;
+    font-family: serif;
+    box-sizing: border-box;
 }
 
-h1,
-h2 {
-    color: var(--oatmeal);
-}
-
-h1 .content {
-    margin-top: 4rem;
-}
-
-header {
-    display: inline-flex;
-    justify-content: space-between;
-    padding-left: 5rem;
-    padding-right: 5rem;
-    padding-top: 1.5rem;
-    height: 5rem;
-    width: 100%;
-    border-bottom: 3px solid var(--oatmeal);
-}
-
-.logo {
-    display: flex; 
+body {
+    background-color: var(--oatmeal);
 }
 
 nav {
@@ -40,20 +22,13 @@ nav {
 }
 
 nav ul {
-    display: flex;
-    padding-left: 2rem;
-    color: var(--oatmeal);
+
 }
 
-nav ul li {
-    padding-left: 2rem;
-}
-
-nav a:hover {
-    background-color: var(--oatmeal);
-    color: var(--ocean);
-    text-decoration: ;
-    
+nav li {
+    display: inline;
+    padding: 0px 20px;
+    float: right;
 }
 
 a {
@@ -61,26 +36,40 @@ a {
     color: var(--oatmeal);
 }
 
-.hero {
-    display: flex;
-    /* border: 5px solid var(--rust); */
-    height: 20rem;
-    width: 100%;
+header {
+    border: 5px solid var(--terracotta);
 }
 
-.top-left {
-    /* border: 5px solid var(--terracotta); */
-    width: 50%;
-    background-image: url(../images/neutral-placeholder.png);
-    /* background-image:  */
+.title {
+    border: 5px solid var(--terracotta);
+}
+
+.about {
+    border: 5px solid var(--terracotta);
+}
+
+.my-work {
+    border: 5px solid var(--rust);
+}
+
+.main-proj {
+    border: 5px solid var(--terracotta);
+}
+
+.other-proj {
+    border: 5px solid var(--terracotta);
+}
+
+.contact {
+    border: 5px solid var(--ocean);
+}
+
+.bottom-left {
+    border: 5px solid var(--terracotta);
+}
+
+.bottom-right {
+    border: 5px solid var(--terracotta);
 
 }
 
-.top-right {
-    /* border: 5px solid var(--terracotta); */
-    width: 50%;
-    background-color: var(--ocean);
-    opacity: 10%;
-    border-bottom: 5px solid var(--oatmeal);
-    
-}
