redid html layout, added additional accessibility support into reset.css for reduced motion, set up initial aesthetics for css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,24 @@
     --flower: #E3A68C;
     --amber: #CC6A46;
     --white: #ffffff;
+    
+    /* --ff-primary: 'Inter Tight', sans-serif;
+
+    --ff-body: var(--ff-primary);
+    --ff-heading: var(--ff-primary);
+
+    --fw-regular: 400;
+    --fw-semi-bold: 500;
+    --fw-bold: 700;
+
+    --fs-300: 
+
+    @media (min-width: 50em) {
+        :root {
+            --fs-300:
+        }
+    } */
+ 
 }
 
 * { 
@@ -18,7 +36,7 @@
 } 
 
 h1 {
-    font-family: 'Unna', serif;
+    font-family: 'Bodoni Moda', serif;
 
 }
 
