--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -3,6 +3,7 @@
 *:after {
   margin: 0;
   padding: 0;
+  font: inherit;
   box-sizing: border-box;
 }
 
@@ -11,7 +12,7 @@ html {
 }
 
 body {
-  min-height: 100%;
+  height: 100%;
   line-height: 1;
   font-family: sans-serif;
 }
@@ -40,4 +41,20 @@ code {
 ​ol,
 ul {
   list-style: none;
+}
+
+/* Removes animations and transitions */
+@media (prefers-reduced-motion: reduuce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
