--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,36 @@
  
 }
 
+/* global styles */
 * { 
     font-family: 'Inter Tight', sans-serif;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 0;
     box-sizing: border-box;
 } 
 
+/* header, inclusive of nav bar */
+header {
+    position: fixed;
+    background-color: var(--flower);
+    top: 0px;
+    height: 5rem;
+    width: 100%;
+}
+
+.nav-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+.nav-list li {
+    padding-left: 2rem;
+    text-decoration: none;
+    color: var(--amber);
+    font-weight: bold;
+}
+
+/* header styles */
 h1 {
     font-size: 3.5rem;
     font-family: 'Bodoni Moda', serif;
@@ -29,18 +52,13 @@ h3 {
     font-size: 2rem;
 }
 
-.fancy {
-    font-size: 1.2rem;
-    font-family: 'Unna', serif;
-    font-style: italic;
-    margin-top: 1rem;
-}
-
-/* general styling */
-
+/* hero section, with image, text and button*/
 .hero-image {
-    padding: 3.75rem;
-
+    margin-top: 5rem;
+    padding: 4rem;
+    background-image: url(../images/annie-spratt-0ZPSX_mQ3xI-unsplash.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .hero-text {
@@ -49,7 +67,6 @@ h3 {
     ;
 }
 
-/* need to link button in html */
 button {
     margin-top: 3rem;
     cursor: pointer;
@@ -70,17 +87,36 @@ button:hover {
     background-color: var(--amber);
 }
 
+/* general design */
+body {
+    font-size: 1em;
+    font-family: 'Inter Tight', sans-serif;
+}
+
+main {
+    margin: 50px;
+}
 
 .about {
     margin-top: 3rem;
     text-align: center;
 }
 
+.fancy {
+    font-size: 1.2rem;
+    font-family: 'Unna', serif;
+    font-style: italic;
+    margin-top: 1rem;
+}
+
+/* functional */
 .container {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   margin-top: 3rem;
-  border: 1px solid 
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 .even-columns {
@@ -89,10 +125,6 @@ button:hover {
 }
 
 
-body {
-    font-size: 1em;
-    font-family: 'Inter Tight', sans-serif;
-}
 
 
 
