added rows and columns outlines for website structure and integrity

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,9 +19,7 @@
 header {
     background-color: var(--flower);
     text-align: center;
-    position: fixed;
     width: 100%;
-    z-index: 999;
 }
 
  nav {
@@ -35,7 +33,7 @@ header {
  nav a {
     text-decoration: none;
     text-transform: capitalize;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 1.25rem;
     color: var(--white);
  }
@@ -51,8 +49,17 @@ label {
 ul {
     list-style: none;
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
 }
+
+ul a {
+    padding: 0.5rem;
+}
+
+ul a:hover {
+    text-decoration-line: overline;
+}
+
 
 
 
@@ -80,7 +87,7 @@ h1 {
 }
 
 h2 {
-    font-size: 2.5rem;
+    font-size: min(30px, 2vw);
     font-family: 'Unna', serif;
 }
 
@@ -130,7 +137,65 @@ body {
 }
 
 main {
-    margin: 50px;
+    margin: 50px auto;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid red;
+    padding: 20px;
+
+}
+
+.main-row {
+    display: flex;
+    flex-direction: row;
+    border: 2px solid blue;
+    padding: 20px;
+    width: 100%;
+}
+
+.main-headline {
+    display: flex;
+    flex-direction: column;
+    border-right: 2px solid black;
+    padding: 20px;
+    flex: 1;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    flex: 4;
+}
+
+.work-row {
+    display: flex;
+    flex-direction: row;
+    border: 2px solid yellow;
+}
+
+.work-column {
+    display: flex;
+    flex-direction: column;
+    border: 2px solid pink;
+    position: relative;
+}
+
+.work-column img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.work-column h2 {
+    position: absolute;
+    bottom: 30%;
+    color: white;
+    font-size: 30px;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .about {
@@ -169,6 +234,18 @@ main {
 }
 
 /* media queries */
+
+@media (max-width: 800px) {
+
+    .work-row {
+        flex-direction: column;
+    }
+
+}
+
+
+
+
 
 /* nav bar */
 
