--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,10 @@
 /* header, inclusive of nav bar */
 header {
     background-color: var(--flower);
-    text-align: center;
     width: 100%;
 }
 
- nav {
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -30,7 +29,7 @@ header {
     padding: 1rem;
  }
 
- nav a {
+nav a {
     text-decoration: none;
     text-transform: capitalize;
     font-weight: 400;
@@ -54,32 +53,20 @@ ul {
 
 ul a {
     padding: 0.5rem;
+    color: var(--white);
+    text-decoration: none;
 }
 
 ul a:hover {
-    text-decoration-line: overline;
+    text-decoration-line: underline;
+    text-underline-offset: 1rem;
 }
 
-
-
-
-
-
-
-/* .nav-list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-}
-
-.nav-list li {
-    padding-left: 2rem;
+li {
     text-decoration: none;
-    color: var(--amber);
-    font-weight: bold;
-} */
+}
 
-/* header styles */
+/* text styles */
 h1 {
     font-size: 3.5rem;
     font-family: 'Bodoni Moda', serif;
@@ -93,21 +80,39 @@ h2 {
 
 h3 {
     font-size: 2rem;
+    color: var(--white);
 }
 
+p {
+    line-height: 1.5;
+    margin-bottom: 1.2rem;
+}
+
+.fancy {
+    font-size: 1.2rem;
+    font-family: 'Unna', serif;
+    font-style: italic;
+}
+
+
 /* hero section, with image, text and button*/
-.hero-image {
+.hero {
     /* margin-top: 5rem; */
     padding: 4rem;
-    background-image: url(../images/scott-webb-R5fIqR8nPu0-unsplash.jpg);
+    background-image: url(../images/annie-spratt-0ZPSX_mQ3xI-unsplash.jpg);
+    object-fit: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
-.hero-text {
+.hero-content {
     text-align: center;
     line-height: 1.2;
-    ;
+}
+
+.hero-img {
+    align-items: center;
+    max-width: 50%;
 }
 
 button {
@@ -117,9 +122,7 @@ button {
     border-radius: 1rem;
     border-color: #6aa8a3;
     padding: 0.5rem 1rem;
-    font-family: ;
     font-weight: 200;
-    font-size: ;
     color: var(--white);
     background-color: var(--turquoise);
     box-shadow: 0 1.25rem 1rem -1rem #6aa8a3;
@@ -140,7 +143,7 @@ main {
     margin: 50px auto;
     display: flex;
     flex-direction: column;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     padding: 20px;
 
 }
@@ -148,7 +151,7 @@ main {
 .main-row {
     display: flex;
     flex-direction: row;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     padding: 20px;
     width: 100%;
 }
@@ -173,14 +176,18 @@ main {
 .work-row {
     display: flex;
     flex-direction: row;
-    border: 2px solid yellow;
+    /* border: 2px solid yellow; */
 }
 
 .work-column {
     display: flex;
     flex-direction: column;
-    border: 2px solid pink;
+    /* border: 2px solid pink; */
     position: relative;
+    margin: 0.625rem;
+    border-color: 0.5rem solid var(--turquoise);
+    box-shadow: #6aa8a3;
+    
 }
 
 .work-column img {
@@ -198,40 +205,33 @@ main {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.about {
-    margin-top: 3rem;
-    text-align: center;
-}
-
-.fancy {
-    font-size: 1.2rem;
-    font-family: 'Unna', serif;
-    font-style: italic;
-    margin-top: 1rem;
-}
-
-/* functional */
-.container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 3rem;
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
-.even-columns {
+.footer-row {
     display: flex;
     flex-direction: row;
+    background-color: var(--flower);
 }
 
-.main-proj {
-
-}
-
-.other-proj {
+.left-column {
     display: flex;
+    flex-direction: column;
+    border-right: 2px dotted white;
+    padding: 20px;
+    flex: 2;
+    justify-content: flex-start;
+    align-items: flex-end;
 }
+
+.right-column {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    flex: 2;
+}
+
+.navlist {
+    display: block;
+}
+
 
 /* media queries */
 
@@ -247,19 +247,10 @@ main {
 
 
 
+
+
+
 /* nav bar */
-
-
-
-
-
-
-
-
-
-
-
-
 
 
  /* --ff-primary: 'Inter Tight', sans-serif;
@@ -283,3 +274,40 @@ main {
     --terracotta: #EDC2A5;
     --oatmeal: #ffffff;
     --ocean: #45535a; */
+
+
+/* .nav-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+.nav-list li {
+    padding-left: 2rem;
+    text-decoration: none;
+    color: var(--amber);
+    font-weight: bold;
+} */
+
+/* functional */
+/* .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 3rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+} */
+
+/* .even-columns {
+    display: flex;
+    flex-direction: row;
+}
+
+.main-proj {
+
+}
+
+.other-proj {
+    display: flex;
+} */
