--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,24 +45,31 @@ label {
     display: none;
 }
 
-ul {
+nav ul {
     list-style: none;
     display: flex;
     gap: 2rem;
 }
 
-ul a {
+nav ul a {
     padding: 0.5rem;
     color: var(--white);
     text-decoration: none;
 }
 
-ul a:hover {
+nav ul a:hover {
     text-decoration-line: underline;
     text-underline-offset: 1rem;
 }
 
 li {
+    text-decoration: none;
+}
+
+/* bottom nav */
+ul a {
+    padding: 0.5rem;
+    color: var(--white);
     text-decoration: none;
 }
 
@@ -74,7 +81,7 @@ h1 {
 }
 
 h2 {
-    font-size: min(30px, 2vw);
+    font-size: 30px;
     font-family: 'Unna', serif;
 }
 
@@ -199,6 +206,7 @@ main {
 
 .work-column img {
     object-fit: cover;
+    margin: 0 auto;
     width: 100%;
     height: 100%;
 }
@@ -244,6 +252,7 @@ main {
 
 @media (max-width: 800px) {
 
+    /* 4 project boxes shift into 1 column */
     .work-row {
         flex-direction: column;
     }
@@ -251,6 +260,38 @@ main {
 }
 
 
+@media screen and (max-width:600px) {
+
+    /* targeting navbar to be responsive on tablets and phones */
+    label {
+        display: block;
+        width: auto;
+        cursor: pointer;
+    }
+
+    nav ul {
+        font-size: 1.2rem;
+        position: absolute;
+        left: -100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: var(--turquoise);
+        gap: 2em;
+        top: 132px;
+        width: 100%;
+        height: calc(100vh - 132px);
+        transition: 0.5s;
+    }
+
+    input[type="checkbox"]:checked ~ ul {
+        left: 0;
+    }
+    
+    nav ul a:hover {
+        line-height: 20px;
+    }
+}
 
 
 
@@ -281,40 +322,3 @@ main {
     --terracotta: #EDC2A5;
     --oatmeal: #ffffff;
     --ocean: #45535a; */
-
-
-/* .nav-list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-}
-
-.nav-list li {
-    padding-left: 2rem;
-    text-decoration: none;
-    color: var(--amber);
-    font-weight: bold;
-} */
-
-/* functional */
-/* .container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 3rem;
-  padding-left: 3rem;
-  padding-right: 3rem;
-} */
-
-/* .even-columns {
-    display: flex;
-    flex-direction: row;
-}
-
-.main-proj {
-
-}
-
-.other-proj {
-    display: flex;
-} */
