--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,9 +256,9 @@ main {
     }
 
 }
+ 
 
-
-@media (max-width:600px) {
+@media screen and (max-width:600px) {
 
     /* targeting navbar to be responsive on tablets and phones */
     label {
